ingress-mnstr/ingress-qarec/ingress-rules_24JAN2022/th_qa1_rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-qa1-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm.monster.com.th
    http:
      paths:
      - path: /profile
        backend:
          serviceName: search-apis-qa1
          servicePort: 80


      - path: /actions
        backend:
          serviceName: search-apis-qa1
          servicePort: 80

      - path: /v1/actions
        backend:
          serviceName: search-apis-qa1
          servicePort: 80         


      - path: /recruiteractions
        backend:
          serviceName: search-apis-qa1
          servicePort: 80               

      - path: /penguin
        backend:
          serviceName: penguin-prod
          servicePort: 80


      - path: /search
        backend:
          serviceName: search-apis-qa1
          servicePort: 80
      - path: /action
        backend:
          serviceName: search-apis-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: nginx-new-qarec-01-qa1-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm.monster.com.th
    http:
      paths:
      - path: /config
        backend:
          serviceName: recruiter4-config-qa1
          servicePort: 80


#      - path: /discovery
#        backend:
#          serviceName: recruiter4-discovery-qa1
#          servicePort: 80


      - path: /gateway
        backend:
          serviceName: recruiter4-gateway-qa1
          servicePort: 80

      - path: /authorization-server
        backend:
          serviceName: recruiter4-authorization-server-qa1
          servicePort: 80


      - path: /search-service
        backend:
          serviceName: recruiter4-search-service-qa1
          servicePort: 80



---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-commonservices-qa1-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm.monster.com.th
    http:
      paths:
      - path: /recruiter4commonservices
        backend:
          serviceName: recruiter4-commonservices-qa1
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-pigeon-qa1-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm.monster.com.th
    http:
      paths:

      - path: /pigeon
        backend:
          serviceName: pigeon-rec4-qa1
          servicePort: 80

      - path: /v4/managejobposting
        backend:
          serviceName: recruiter4-managejobposting-ui-qa1
          servicePort: 80


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
    nginx.ingress.kubernetes.io/rewrite-target: "/eureka/"
  name: nginx-new-qarec-01-qa1-descovery-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm.monster.com.th
    http:
      paths:


      - path: /eureka
        backend:
          serviceName: recruiter4-discovery-qa1
          servicePort: 80


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-consumer-ui-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-ui-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-ui-qa-nm.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-consumer-qa1
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-config-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-config.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-config.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-config-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-auth-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-auth.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-auth.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-authorization-server-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-discovery-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-discovery.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-discovery.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-discovery-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-gateway-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-gateway.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-gateway.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-gateway-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-search-service-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-search-service.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-search-service.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-search-service-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-master-data-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-masterdata.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-masterdata.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-masterdata-service-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-auth-data-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-auth.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-auth.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-authorization-server-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-config-data-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-config.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-config.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-config-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-discovery-data-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-discovery.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-discovery.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-discovery-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-gateway-data-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-gateway.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-gateway.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-gateway-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-masterdata-data-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-masterdata.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-masterdata.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-masterdata-service-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-search-services-data-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-search-service.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-search-service.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-search-service-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-ui-qa1-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-ui-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-ui-qa-nm.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-consumer-qa1   ####recruiter4-ui-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-jobposting-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-jobposting.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-jobposting.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-jobposting-service-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-mjp-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-mjp.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-mjp.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-managejobposting-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-jobposting-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm-jobposting.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm-jobposting.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-jobposting-service-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-qa1-questionnaire-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      -  rec-qa-nm-questionnaire.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host:  rec-qa-nm-questionnaire.monster.com.th
    http:
      paths:
      - path: /
        backend:
          serviceName: recruiter4-questionnaire-service-qa1
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-other-qa1-rules-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm.monster.com.th
    http:
      paths:
      - path: /sentinel
        backend:
          serviceName: recruiter4-sentinel-qa1
          servicePort: 80

---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  annotations:
#    kubernetes.io/ingress.class: "nginx-qarec"
#  name: nginx-new-qarec-01-qa1-consumer-ui-noida
#spec:
#  tls:
#    - hosts:
#      - rec-ui-qa-nm.monsterindia.noida
#      secretName: wildmonsterth2021
#  rules:
#  - host: rec-ui-qa-nm.monsterindia.noida
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: recruiter4-consumer-qa1
#          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
    nginx.ingress.kubernetes.io/rewrite-target: "/recruiter-srp"
  name: nginx-new-qarec-01-qa1-recuiter-srp-th
  namespace: qa-application
spec:
  tls:
    - hosts:
      - rec-qa-nm.monster.com.th
      secretName: wildmonsterth2021
  rules:
  - host: rec-qa-nm.monster.com.th
    http:
      paths:
      - path: /v4/recruiter
        backend:
          serviceName: recruiter4-recruitersrp-v4-qa1
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-qarec"
  name: nginx-new-qarec-01-th
spec:
  tls:
    - hosts:


  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: webapp1-svc
          servicePort: 80


      - path: /profile
        backend:
          serviceName: search-apis-qa1
          servicePort: 80
      - path: /actions
        backend:
          serviceName: search-apis-qa1
          servicePort: 80


      - path: /search
        backend:
          serviceName: search-apis-qa1
          servicePort: 80

      - path: /action
        backend:
          serviceName: search-apis-qa1
          servicePort: 80

      - path: /RecruiterAccount
        backend:
          serviceName: recruiter4-qa1
          servicePort: 80

      - path: /RecruiterAuth
        backend:
          serviceName: recruiter4-qa1
          servicePort: 80


      - path: /raven
        backend:
          serviceName: raven-seeker
          servicePort: 80

      - path: /srp
        backend:
          serviceName: search-srp-seeker
          servicePort: 3002
      - path: /seeker
        backend:
          serviceName: search-srp-seeker
          servicePort: 3002

      - path: /recruiter4commonservices
        backend:
          serviceName: recruiter4-commonservices-dev
          servicePort: 80


      - path: /pigeon
        backend:
          serviceName: pigeon-rec4-qa1
          servicePort: 80

      - path: /parrot
        backend:
          serviceName: parrot-rec4-qa1
          servicePort: 80

      - path: /penguin
        backend:
          serviceName: penguin-prod
          servicePort: 80

      - path: /penguinconsumer
        backend:
          serviceName: penguin-consumer-prod
          servicePort: 80

      - path: /v4/managejobposting
        backend:
          serviceName: recruiter4-managejobposting-ui-qa1
          servicePort: 80
